# GyroGloveCPP

./: CMakeLists.txt  MouseAdapter.cpp  MouseAdapter.h  app.cpp  app.h  dbus_adapter.cpp  dbus_adapter.h  decoder.cpp  decoder.h  device_handler.cpp  device_handler.h  devicefinder.cpp  devicefinder.h  devicehandler.cpp  devicehandler.h  global.h  main.cpp  modes.txt  mouse_adapter.cpp  mouse_adapter.h  mouse_mover.cpp  mouse_mover.h  my_math.h  quaternion.cpp  quaternion.h  resources.qrc
BLE/: device_connector.cpp  device_connector.h  device_finder.cpp  device_finder.h
Gui/: app.cpp  app.h  selector_ring.cpp  selector_ring.h
Handlers/: adapter.h  device_handler.cpp  device_handler.h  mouse_adapter.cpp  mouse_adapter.h
Handlers/Adapters/: adapter.h  mouse_adapter.cpp  mouse_adapter.h
Tools/: decoder.cpp  decoder.h  mouse_mover.cpp  mouse_mover.h  my_math.cpp  my_math.h  quaternion.cpp  quaternion.h  tools.cpp  tools.h
